--- a/APITESCHI/api/templates/sign_up.html
+++ b/APITESCHI/api/templates/sign_up.html
@@ -63,12 +63,32 @@
 					<div class="row h-100">
 						<div class="col-12 col-md-10 col-lg-5 text-start mx-auto d-flex align-items-center">
 							<div class="w-100">
-								<h2>Sign up for your account!</h2>
-								<h5 class="fw-light">Join us today! Create your account easy with less information.</h5>
+								<h2>"Regístrate para tener tu cuenta."</h2>
+								<h5 class="fw-light">"¡Únete hoy! Crea tu cuenta fácilmente "</h5>
 								<div class="form mt-4 ">
 									<div>
-										<p class="text-start mb-2">Email address</p>
-										<span class="form-group"><input type="email" class="form-control" placeholder="E-mail"></span>
+										<p class="text-start mb-2">Nombre</p>
+										<span class="form-group"><input type="Name" class="form-control" placeholder="name"></span>
+									</div>
+									<div>
+										<p class="text-start mb-2">Apellido Paterno</p>
+										<span class="form-group"><input type="Name" class="form-control" placeholder="Apellido Paterno"></span>
+									</div>
+									<div>
+										<p class="text-start mb-2">Apellido Materno</p>
+										<span class="form-group"><input type="Name" class="form-control" placeholder="Apellido Materno"></span>
+									</div>
+									<div>
+										<p class="text-start mb-2">Correo Electronico</p>
+										<span class="form-group"><input type="email" class="form-control" placeholder="Correo Electronico"></span>
+									</div>
+									<div>
+										<p class="text-start mb-2">Nobre de Usuario</p>
+										<span class="form-group"><input type="name" class="form-control" placeholder="Nombre de Usuario"></span>
+									</div>
+									<div>
+										<p class="text-start mb-2">Telefono</p>
+										<span class="form-group"><input type="number" class="form-control" placeholder="E-mail"></span>
 									</div>
 									<div>
 										<div class="align-items-center">
