--- a/APITESCHI/api/templates/index_9.html
+++ b/APITESCHI/api/templates/index_9.html
@@ -105,7 +105,7 @@
 						</li>
 						<!-- Menu item 2 Blog-->
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="blogMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EDITORIAL</a>
+							<a class="nav-link dropdown-toggle" href="#" id="blogMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Editorial</a>
 							<ul class="dropdown-menu" aria-labelledby="blogMenu">
 								<li class="dropdown-submenu">
 									<a class="dropdown-item dropdown-toggle" href="#">Blog default</a>
@@ -136,7 +136,7 @@
 						</li>
 						<!-- Menu item 3 Pages-->
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
+							<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autores</a>
 							<ul class="dropdown-menu" aria-labelledby="pagesMenu">
 								<li> <a class="dropdown-item" href="about-classic.html">About Classic</a></li>
 								<li> <a class="dropdown-item" href="about-advance.html">About Advance</a> </li>
@@ -145,24 +145,12 @@
 								<li> <a class="dropdown-item" href="team.html">Team</a> </li>
 								<li> <a class="dropdown-item" href="careers.html">Careers</a> </li>
 								<li> <a class="dropdown-item" href="careers-single.html">Careers single</a> </li>
-								<li class="dropdown-submenu">
-									<a class="dropdown-item dropdown-toggle" href="#">Login & Signup</a>
-									<ul class="dropdown-menu">
-										<li> <a class="dropdown-item" href="sign-in.html">Sign in</a> </li>
-										<li> <a class="dropdown-item" href="sign-up.html">Sign up</a> </li>
-										<li> <a class="dropdown-item" href="password-recovery.html">Password recovery</a> </li>
-									</ul>
-								</li>
-								<li> <a class="dropdown-item" href="pricing.html">Pricing</a> </li>
-								<li> <a class="dropdown-item" href="timeline.html">Timeline</a> </li>
-								<li> <a class="dropdown-item" href="faq.html">FAQs</a> </li>
-								<li> <a class="dropdown-item" href="maintenance-mode.html">Maintenance mode</a> </li>
-								<li> <a class="dropdown-item" href="error-404.html">Error 404</a> </li>
+			
 							</ul>
 						</li>
 						<!-- Menu item 4 Portfolio-->
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="portfolioMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio</a>
+							<a class="nav-link dropdown-toggle" href="#" id="portfolioMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Biblioteca</a>
 							<ul class="dropdown-menu" aria-labelledby="portfolioMenu">
 								<li> <a class="dropdown-item" href="portfolio-grid-column-2.html">Portfolio Column 2</a> </li>
 								<li> <a class="dropdown-item" href="portfolio-grid-column-3.html">Portfolio Column 3</a> </li>
@@ -176,14 +164,14 @@
 						</li>
 						<!-- Menu item 5 Elements-->
 						<li class="nav-item dropdown megamenu">
-							<a class="nav-link dropdown-toggle" href="#" id="elementsMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Elements</a>
+							<a class="nav-link dropdown-toggle" href="#" id="elementsMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
 							<div class="dropdown-menu" aria-labelledby="elementsMenu">
 								<div class="container">
 									<div class="row w-100">
 										<div class="col-sm-6 col-lg-3">
 											<ul class="list-unstyled">
-												<li> <a class="dropdown-item" href="elements-accordion.html">Accordion</a> </li>
-												<li> <a class="dropdown-item" href="elements-action-box.html">Action box</a> </li>
+												<li> <a class="dropdown-item" href="sign_in.html">Ingresar</a> </li>
+												<li> <a class="dropdown-item" href="sign_up.html">Registrarse</a> </li>
 												<li> <a class="dropdown-item" href="elements-alerts.html">Alerts</a> </li>
 												<li> <a class="dropdown-item" href="elements-animated-headlines.html">Animated Headlines</a> </li>
 												<li> <a class="dropdown-item" href="elements-blockquote.html">Blockquote</a> </li>
@@ -224,14 +212,7 @@
 							</div>
 						</li>
 						<!-- Menu item 6 Docs-->
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="docMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">LOGIN</a>
-							<ul class="dropdown-menu" aria-labelledby="docMenu">
-								<li> <a class="dropdown-item" href="sign_in.html" target="_blank">Ingresar</a> </li>
-								<li> <a class="dropdown-item" href="sign_up.html" target="_blank">Registrarse</a> </li>
-								<li> <a class="dropdown-item" href="http://support.webestica.com/" target="_blank">Soporte</a> </li>
-							</ul>
-						</li>
+						
 					</ul>
 				</div>
 				<!-- Main Menu End -->
