--- a/APITESCHI/api/templates/sign_in.html
+++ b/APITESCHI/api/templates/sign_in.html
@@ -63,22 +63,22 @@
 					<div class="row h-100">
 						<div class="col-12 col-md-10 col-lg-5 text-start mx-auto d-flex align-items-center">
 							<div class="w-100">
-								<h2 class="">Sign into your account!</h2>
-								<h5 class="fw-light">Nice to see you! Please log in with your account.</h5>
+								<h2 class="">Inicia sesión en tu cuenta.</h2>
+								<h5 class="fw-light"> ¡Es bueno verte! Por favor, inicia sesión con tu cuenta.</h5>
 								<div class="form mt-4 ">
 									<div>
-										<p class="text-start mb-2">Email address</p>
+										<p class="text-start mb-2">Correo Electronico</p>
 										<span class="form-group"><input type="email" class="form-control" placeholder="E-mail"></span>
 									</div>
 									<div>
 										<div class="d-flex justify-content-between align-items-center">
-											<p class="text-start mb-2">Password</p>
+											<p class="text-start mb-2">Contraseña</p>
 											<a class="text-muted small mb-2" href="password-recovery.html">Lost password? Click Here.</a>
 										</div>
 										<span class="form-group"><input type="password" class="form-control" placeholder="*********"></span>
 									</div>
 									<div class="row align-items-center g-0 m-0">
-										<div class="col-6 col-md-8"><span class="text-muted">Don't have an account? <a href="sign-up.html">Signup</a></span></div>
+										<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="sign_up.html">Registrarse</a></span></div>
 										<div class="col-6 col-md-4 text-end"><button class="btn btn-dark ">Let's Rock</button></div>
 									</div>
 								</div>
