--- a/APITESCHI/api/templates/sign_up.html
+++ b/APITESCHI/api/templates/sign_up.html
@@ -107,7 +107,7 @@
     								<label class="form-check-label ms-2" for="exampleCheck1">By signing up, you agree to the <a href="#">terms of service</a></label>
 									</div>
 									<div class="row align-items-center g-0 m-0">
-										<div class="col-6"><span class="text-muted">Already on wizixo? <a href="sign-in.html">Sign in</a></span></div>
+										<div class="col-6"><span class="text-muted">Already on wizixo? <a href="sign_in.html">Sign in</a></span></div>
 										<div class="col-6 text-end"><button class="btn btn-dark ">Sign me up!</button></div>
 									</div>
 								</div>
