no funciona pero tiene algo

--- a/APITESCHI/api/templates/sign_up.html
+++ b/APITESCHI/api/templates/sign_up.html
@@ -57,7 +57,7 @@
 						</ul>
 					</div>
 				</div>
-				<!-- Right -->
+				<!-- Right FORMULARIO -->
 				<div class="col-12 col-md-7 col-xl-8 mx-auto my-5">
 					<div class="row h-100">
 						<div class="col-12 col-md-10 col-lg-5 text-start mx-auto d-flex align-items-center">
@@ -103,19 +103,29 @@
 									</div>
 									<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
 										<input type="checkbox" class="form-check-input mb-0" id="exampleCheck1">
-    								<label class="form-check-label ms-2" for="exampleCheck1">By signing up, you agree to the <a href="#">terms of service</a></label>
+									<label class="form-check-label ms-2" for="exampleCheck1">Al registrarte, aceptas los <a href="">Regresar al Menu</a></label>
 									</div>
-									<div class="row align-items-center g-0 m-0">
-										<div class="col-6"><span class="text-muted">Already on wizixo? <a href="sign_in.html">Sign in</a></span></div>
-										<div class="col-6 text-end"><button class="btn btn-dark ">Sign me up!</button></div>
-									</div>
+									<form action="sign_up.html" method="GET">
+										<div class="row align-items-center g-0 m-0">
+											<div class="col-6"><span class="text-muted">¿ya tienes una sesion? <a href="sign_in.html">Ingresar</a></span></div>
+											<div class="col-6 text-end"><button class="btn btn-dark ">REGISTRARME</button></div>
+	
+	
+											
+										</div>
+
+									</form>
+
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+
+
 			</div>
 		</div>
+		
 	</section>
 	<!-- =======================
 	Sign up -->
