--- a/APITESCHI/api/templates/sign_in.html
+++ b/APITESCHI/api/templates/sign_in.html
@@ -78,8 +78,11 @@
 										<span class="form-group"><input type="password" class="form-control" placeholder="*********"></span>
 									</div>
 									<div class="row align-items-center g-0 m-0">
-										<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="sign_up.html">Registrarse</a></span></div>
+										<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="{% url 'sign_up'%}">Registrarse</a></span></div>
 										<div class="col-6 col-md-4 text-end"><button class="btn btn-dark ">Let's Rock</button></div>
+									</div>
+									<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
+										<label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label>
 									</div>
 								</div>
 							</div>
