--- a/APITESCHI/api/templates/index_9.html
+++ b/APITESCHI/api/templates/index_9.html
@@ -61,7 +61,7 @@
 		<nav class="navbar navbar-expand-lg">
 			<div class="container-fluid">
 				<!-- Logo -->
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="{% url 'index_9'%}">
 					<img class="navbar-brand-item" src="{% static 'images/logo-white.svg'%}" alt="Wizixo">
 				</a>
 				<!-- Menu opener button -->
@@ -77,23 +77,24 @@
 							<div class="dropdown-menu pb-3 pb-lg-0" aria-labelledby="demosMenu" >
 								<div class="d-block d-sm-flex">
 									<ul class="list-unstyled w-100 w-sm-50 pe-0 pe-lg-5">
-										<li class="dropdown-header">Business Homepages</li>
-										<li> <a class="dropdown-item" href="index.html">Classic Default<span class="badge bg-success ms-2">Hot</span></a> </li>
-										<li> <a class="dropdown-item" href="index-2.html">Corporate Start-Up</a> </li>
-										<li> <a class="dropdown-item" href="index-3.html">Landing Trendy</a> </li>
-										<li> <a class="dropdown-item" href="index-4.html">Portfolio Modern</a> </li>
-										<li> <a class="dropdown-item" href="index-5.html">Agency Start-Up</a> </li>
+										<!--<li class="dropdown-header">Business Homepages</li> -->
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Terror</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Ficción</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Aventura</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Romance</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Drama</a> </li>
 									</ul>
 									<ul class="list-unstyled w-100 w-sm-50 pe-0 pe-lg-5">
-										<li class="dropdown-header mt-3 mt-sm-0">Classic Homepages</li>
-										<li> <a class="dropdown-item" href="index-6.html">Classic Corporate</a> </li>
-										<li> <a class="dropdown-item" href="index-7.html">Creative agency</a> </li>
-										<li> <a class="dropdown-item" href="index-8.html">Home Elegant</a> </li>
-										<li> <a class="dropdown-item active" href="index-9.html">Marketplace</a> </li>
-										<li> <a class="dropdown-item" href="index-10.html">Personal Portfolio</a> </li>
+										<!--<li class="dropdown-header mt-3 mt-sm-0">Classic Homepages</li> -->
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Novela</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Cuentos</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Poesia</a> </li>
+										<li> <a class="dropdown-item active" href="{% url 'genero1'%}">Fantasia</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Misterio</a> </li>
 									</ul>
 								</div>
-								<!-- mega menu Bottom -->
+								<!-- mega menu Bottom 
+								
 								<div class="w-100 bg-grad pattern-overlay-2 p-4 mt-3 all-text-white d-none d-lg-flex">
 									<div class="align-self-center me-4">
 										<h4 class="mb-0">Checkout the doc!</h4>
@@ -103,48 +104,23 @@
 								</div>
 							</div>
 						</li>
+								-->
+								
 						<!-- Menu item 2 Blog-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="blogMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Editorial</a>
 							<ul class="dropdown-menu" aria-labelledby="blogMenu">
-								<li class="dropdown-submenu">
-									<a class="dropdown-item dropdown-toggle" href="#">Blog default</a>
-									<ul class="dropdown-menu">
-										<li> <a class="dropdown-item" href="blog-classic.html">Full Width</a> </li>
-										<li> <a class="dropdown-item" href="blog-classic-left-sidebar.html">Left Sidebar</a> </li>
-										<li> <a class="dropdown-item" href="blog-classic-right-sidebar.html">Right Sidebar</a> </li>
-									</ul>
-								</li>
-								<li class="dropdown-submenu">
-									<a class="dropdown-item dropdown-toggle" href="#">Blog Grid</a>
-									<ul class="dropdown-menu">
-										<li> <a class="dropdown-item" href="blog-grid-column-3.html">Three column</a> </li>
-										<li> <a class="dropdown-item" href="blog-grid-column-4.html">Four column</a> </li>
-										<li> <a class="dropdown-item" href="blog-grid-left-sidebar.html">Left Sidebar</a> </li>
-										<li> <a class="dropdown-item" href="blog-grid-right-sidebar.html">Right Sidebar</a> </li>
-									</ul>
-								</li>
-								<li><a class="dropdown-item" href="blog-minimal.html">Blog minimal</a></li>
-								<li class="dropdown-submenu">
-									<a class="dropdown-item dropdown-toggle" href="#">Blog Single</a>
-									<ul class="dropdown-menu">
-										<li> <a class="dropdown-item" href="blog-single-classic.html">Single classic</a> </li>
-										<li> <a class="dropdown-item" href="blog-single-minimal.html">Single Minimal</a> </li>
-									</ul>
-								</li>
+								<li><a class="dropdown-item" href="{% url 'editorial1'%}">Editorial 1</a></li>
+								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 2</a></li>
+								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 3</a></li>
+								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 4</a></li>
 							</ul>
 						</li>
 						<!-- Menu item 3 Pages-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Autores</a>
 							<ul class="dropdown-menu" aria-labelledby="pagesMenu">
-								<li> <a class="dropdown-item" href="about-classic.html">About Classic</a></li>
-								<li> <a class="dropdown-item" href="about-advance.html">About Advance</a> </li>
-								<li> <a class="dropdown-item" href="service.html">Service</a> </li>
-								<li> <a class="dropdown-item" href="contact.html">Contact</a> </li>
-								<li> <a class="dropdown-item" href="team.html">Team</a> </li>
-								<li> <a class="dropdown-item" href="careers.html">Careers</a> </li>
-								<li> <a class="dropdown-item" href="careers-single.html">Careers single</a> </li>
+								<li> <a class="dropdown-item" href="{% url 'team'%}">Todos los Autores</a> </li>
 			
 							</ul>
 						</li>
@@ -152,65 +128,20 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="portfolioMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Biblioteca</a>
 							<ul class="dropdown-menu" aria-labelledby="portfolioMenu">
-								<li> <a class="dropdown-item" href="portfolio-grid-column-2.html">Portfolio Column 2</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-grid-column-3.html">Portfolio Column 3</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-grid-column-4.html">Portfolio Column 4</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-grid-column-5.html">Portfolio Column 5</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-grid-column-6.html">Portfolio Column 6</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-single.html">Portfolio Single</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-single-02.html">Portfolio Single 2</a> </li>
-								<li> <a class="dropdown-item" href="portfolio-case-studies.html">Portfolio case studies <span class="badge bg-success ms-2">Hot</span></a> </li>
+								<li> <a class="dropdown-item" href="{% url 'biblioteca'%}">Ir a mi Biblioteca</a> </li>
 							</ul>
 						</li>
 						<!-- Menu item 5 Elements-->
-						<li class="nav-item dropdown megamenu">
-							<a class="nav-link dropdown-toggle" href="#" id="elementsMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
-							<div class="dropdown-menu" aria-labelledby="elementsMenu">
-								<div class="container">
-									<div class="row w-100">
-										<div class="col-sm-6 col-lg-3">
-											<ul class="list-unstyled">
-												<li> <a class="dropdown-item" href="sign_in.html">Ingresar</a> </li>
-												<li> <a class="dropdown-item" href="sign_up.html">Registrarse</a> </li>
-												<li> <a class="dropdown-item" href="elements-alerts.html">Alerts</a> </li>
-												<li> <a class="dropdown-item" href="elements-animated-headlines.html">Animated Headlines</a> </li>
-												<li> <a class="dropdown-item" href="elements-blockquote.html">Blockquote</a> </li>
-												<li> <a class="dropdown-item" href="elements-buttons.html">Buttons</a> </li>
-											</ul>
-										</div>
-										<div class="col-sm-6 col-lg-3">
-											<ul class="list-unstyled">
-												<li> <a class="dropdown-item" href="elements-clients.html">Clients</a> </li>
-												<li> <a class="dropdown-item" href="elements-counter.html">Counter</a> </li>
-												<li> <a class="dropdown-item" href="elements-divider.html">Divider</a> </li>
-												<li> <a class="dropdown-item" href="elements-feature-box.html">Feature box</a> </li>
-												<li> <a class="dropdown-item" href="elements-forms.html">Forms</a> </li>
-												<li> <a class="dropdown-item" href="elements-grid.html">Grid</a> </li>
-											</ul>
-										</div>
-										<div class="col-sm-6 col-lg-3">
-											<ul class="list-unstyled">
-												<li> <a class="dropdown-item" href="elements-list-styles.html">list styles</a> </li>
-												<li> <a class="dropdown-item" href="elements-map.html">Map</a> </li>
-												<li> <a class="dropdown-item" href="elements-modal.html">Modal</a> </li>
-												<li> <a class="dropdown-item" href="elements-skill.html">skill</a> </li>
-												<li> <a class="dropdown-item" href="elements-social-icon.html">social icon</a> </li>
-												<li> <a class="dropdown-item" href="elements-tab.html">Tab</a> </li>
-											</ul>
-										</div>
-										<div class="col-sm-6 col-lg-3">
-											<ul class="list-unstyled">
-												<li> <a class="dropdown-item" href="elements-table.html">Table</a> </li>
-												<li> <a class="dropdown-item" href="elements-team.html">Team</a> </li>
-												<li> <a class="dropdown-item" href="elements-tiny-slider.html">Tiny slider</a> </li>
-												<li> <a class="dropdown-item" href="elements-typography.html">Typography</a> </li>
-												<li> <a class="dropdown-item" href="elements-video.html">Video</a> </li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="portfolioMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Login</a>
+							<ul class="dropdown-menu" aria-labelledby="portfolioMenu">
+								<li> <a class="dropdown-item" href="{% url 'sign_in'%}">Ingresar</a> </li>
+								<li> <a class="dropdown-item" href="{% url 'sign_up'%}">Registrar</a> </li>
+							</ul>
 						</li>
+
+						<!-- pruebaaaaa-->
+
 						<!-- Menu item 6 Docs-->
 						
 					</ul>
@@ -224,7 +155,7 @@
 					</div>
 					<!-- extra item Btn-->
 					<div class="nav-item border-0 d-none d-lg-inline-block align-self-center">
-						<a href="#" class=" btn btn-sm btn-grad text-white mb-0">Buy Now!</a>
+						<a href="#" class=" btn btn-sm btn-grad text-white mb-0">Favoritos!</a>
 					</div>
 				</div>
 				<!-- Header Extras End-->
@@ -241,7 +172,7 @@
 		<div class="tiny-slider arrow-dark arrow-large arrow-transparent arrow-hover">
 			<div class="tiny-slider-inner h-700 h-lg-900" data-autoplay="true" data-autoplaytime="7000" data-gutter="0" data-arrow="true" data-dots="false" data-items="1">
 				<!-- slide 1-->
-				<div class="bg-overlay-dark-3 h-100" style="background-image:url(assets/images/banner/06.jpg); background-position: center center; background-size: cover;">
+				<div class="bg-overlay-dark-3 h-100" style="background-image:url( images/banner/06.jpg); background-position: center center; background-size: cover;">
 					<div class="container h-100">
 						<div class="row d-flex h-100">
 							<div class="col-md-8 col-lg-6 me-auto slider-content justify-content-center align-self-center align-items-start text-start">
@@ -318,14 +249,13 @@
 				<div class="col-sm-10">
 					<div class="tiny-slider">
 						<div class="tiny-slider-inner arrow-hover arrow-dark" data-arrow="false" data-dots="false" data-items-xl="6" data-items-lg="5" data-items-md="4" data-items-sm="3" data-items-xs="2" data-autoplay="4500">
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/01.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/02.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/03.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/04.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/05.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/06.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/07.png'%}" alt=""></div>
-							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/08.png'%}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/01.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/02.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/04.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/05.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/06.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/07.png' %}" alt=""></div>
+							<div class="item"><img class="w-75 mx-auto" src="{% static 'images/clients/08.png' %}" alt=""></div>
 						</div>
 					</div>
 				</div>
@@ -444,7 +374,7 @@
 					<!-- Footer widget 1 -->
 					<div class="col-md-4">
 						<div class="widget">
-							<a href="index.html" class="footer-logo">
+							<a href="{% url 'index_9'%}" class="footer-logo">
 								<!-- footer logo Start -->
 								<img class="footer-logo-item" src="{% static 'images/logo.svg'%}" alt="">
 								<!-- footer logo End -->
@@ -473,7 +403,7 @@
 							<ul class="nav flex-column primary-hover">
 								<li class="nav-item"><a class="nav-link" href="about-classic.html">About</a></li>
 								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-								<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+								<li class="nav-item"><a class="nav-link" href="{% url 'index_9'%}">Home</a></li>
 								<li class="nav-item"><a class="nav-link" href="blog-grid-left-sidebar.html">Blog</a></li>
 								<li class="nav-item"><a class="nav-link" href="portfolio-grid-column-4.html">Portfolio</a></li>
 							</ul>
@@ -499,11 +429,11 @@
 			<div class="container">
 				<div class="d-md-flex justify-content-between align-items-center py-3 text-center text-md-start">
 					<!-- copyright text -->
-					<div class="copyright-text">©2021 All Rights Reserved by <a href="#!"> Wizixo.</a></div>
+					<div class="copyright-text">©2021 All Rights Reserved by <a href="{% url 'index_9'%}"> Wizixo.</a></div>
 					<!-- copyright links-->
 					<div class="copyright-links primary-hover mt-3 mt-md-0">
 						<ul class="list-inline">
-							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">Home</a></li>
+							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="{% url 'index_9'%}">Home</a></li>
 							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">About Us</a></li>
 							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">Career</a></li>
 							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">Privacy Policy</a></li>
