--- a/APITESCHI/api/templates/editorial2.html
+++ b/APITESCHI/api/templates/editorial2.html
@@ -466,7 +466,7 @@
 					<!-- Footer widget 1 -->
 					<div class="col-md-4">
 						<div class="widget">
-							<a href="{% url 'index_9'%}index.html" class="footer-logo">
+							<a href="{% url 'index_9'%}" class="footer-logo">
 								<!-- footer logo Start -->
 								<img class="footer-logo-item" src="{% static 'images/logo.svg'%}" alt="">
 								<!-- footer logo End -->
