--- a/APITESCHI/api/templates/sign_in.html
+++ b/APITESCHI/api/templates/sign_in.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Creative Multipurpose Bootstrap Template">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="{% static 'images/favicon.ico'%}">
+	<link rel="shortcut icon" href="{% static 'images/favicon.ico'%}" >
 
 	<!-- Google Font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900%7CPlayfair+Display:400,400i,700,700i%7CRoboto:400,400i,500,700" rel="stylesheet">
@@ -50,11 +50,11 @@
 							</svg>
 							<!-- SVG Logo End -->
 						</div>
-						<h3 class="fw-light">We connect you with the world largest community</h3>
+						<h3 class="fw-light">Bienvenido a WATTeschi</h3>
 						<ul class="list-group list-group-borderless mt-4">
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Connect with your community via Wizixo</li>
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Discover the best experience with fellowship</li>
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Create your wishlist and enjoy to best experience</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Busca tus libros preferidos</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Leelos y disfruta</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Califica los libros y deja una reseña</li>
 						</ul>
 					</div>
 				</div>
@@ -73,13 +73,13 @@
 									<div>
 										<div class="d-flex justify-content-between align-items-center">
 											<p class="text-start mb-2">Contraseña</p>
-											<a class="text-muted small mb-2" href="password-recovery.html">Lost password? Click Here.</a>
+											<!-- <a class="text-muted small mb-2" href="password-recovery.html">Lost password? Click Here.</a> -->
 										</div>
 										<span class="form-group"><input type="password" class="form-control" placeholder="*********"></span>
 									</div>
 									<div class="row align-items-center g-0 m-0">
 										<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="{% url 'sign_up'%}">Registrarse</a></span></div>
-										<div class="col-6 col-md-4 text-end"><button class="btn btn-dark ">Let's Rock</button></div>
+										<div class="col-6 col-md-4 text-end"><button class="btn btn-dark ">Vamos a Rockear</button></div>
 									</div>
 									<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
 										<label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label>
