--- a/APITESCHI/api/templates/sign_up.html
+++ b/APITESCHI/api/templates/sign_up.html
@@ -50,11 +50,11 @@
 							</svg>
 							<!-- SVG Logo End -->
 						</div>
-						<h3 class="fw-light">We connect you with the world largest community</h3>
+						<h3 class="fw-light">Bienvenido a WATTeschi</h3>
 						<ul class="list-group list-group-borderless mt-4">
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Connect with your community via Wizixo</li>
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Discover the best experience with fellowship</li>
-							<li class="list-group-item text-white"><i class="fa fa-check"></i>Create your wishlist and enjoy to best experience</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Busca tus libros preferidos</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Leelos y disfruta</li>
+							<li class="list-group-item text-white"><i class="fa fa-check"></i>Califica los libros y deja una reseña</li>
 						</ul>
 					</div>
 				</div>
