--- a/APITESCHI/api/templates/editorial4.html
+++ b/APITESCHI/api/templates/editorial4.html
@@ -466,7 +466,7 @@
 					<!-- Footer widget 1 -->
 					<div class="col-md-4">
 						<div class="widget">
-							<a href="{% url 'index_9'%}index.html" class="footer-logo">
+							<a href="{% url 'index_9'%}" class="footer-logo">
 								<!-- footer logo Start -->
 								<img class="footer-logo-item" src="{% static 'images/logo.svg'%}" alt="">
 								<!-- footer logo End -->
@@ -492,11 +492,12 @@
 					<div class="col-md-2 col-sm-6">
 						<div class="widget">
 							<h6>Quick LInks</h6>
-							<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-							<li class="nav-item"><a class="nav-link" href="{% url 'index_9'%}">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+							<ul class="nav flex-column primary-hover">
+								<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+								<li class="nav-item"><a class="nav-link" href="{% url 'index_9'%}">Home</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
 							</ul>
 						</div>
 					</div>
