--- a/APITESCHI/api/templates/index_9.html
+++ b/APITESCHI/api/templates/index_9.html
@@ -79,18 +79,18 @@
 									<ul class="list-unstyled w-100 w-sm-50 pe-0 pe-lg-5">
 										<!--<li class="dropdown-header">Business Homepages</li> -->
 										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Terror</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Ficción</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Aventura</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Romance</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Drama</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero2'%}">Ficción</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero3'%}">Aventura</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero4'%}">Romance</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero5'%}">Drama</a> </li>
 									</ul>
 									<ul class="list-unstyled w-100 w-sm-50 pe-0 pe-lg-5">
 										<!--<li class="dropdown-header mt-3 mt-sm-0">Classic Homepages</li> -->
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Novela</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Cuentos</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Poesia</a> </li>
-										<li> <a class="dropdown-item active" href="{% url 'genero1'%}">Fantasia</a> </li>
-										<li> <a class="dropdown-item" href="{% url 'genero1'%}">Misterio</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero6'%}">Novela</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero7'%}">Cuentos</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero8'%}">Poesia</a> </li>
+										<li> <a class="dropdown-item active" href="{% url 'genero9'%}">Fantasia</a> </li>
+										<li> <a class="dropdown-item" href="{% url 'genero10'%}">Misterio</a> </li>
 									</ul>
 								</div>
 								<!-- mega menu Bottom 
@@ -111,9 +111,9 @@
 							<a class="nav-link dropdown-toggle" href="#" id="blogMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Editorial</a>
 							<ul class="dropdown-menu" aria-labelledby="blogMenu">
 								<li><a class="dropdown-item" href="{% url 'editorial1'%}">Editorial 1</a></li>
-								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 2</a></li>
-								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 3</a></li>
-								<li><a class="dropdown-item" href="blog-minimal.html">Editorial 4</a></li>
+								<li><a class="dropdown-item" href="{% url 'editorial2'%}">Editorial 2</a></li>
+								<li><a class="dropdown-item" href="{% url 'editorial3'%}">Editorial 3</a></li>
+								<li><a class="dropdown-item" href="{% url 'editorial4'%}">Editorial 4</a></li>
 							</ul>
 						</li>
 						<!-- Menu item 3 Pages-->
@@ -172,7 +172,7 @@
 		<div class="tiny-slider arrow-dark arrow-large arrow-transparent arrow-hover">
 			<div class="tiny-slider-inner h-700 h-lg-900" data-autoplay="true" data-autoplaytime="7000" data-gutter="0" data-arrow="true" data-dots="false" data-items="1">
 				<!-- slide 1-->
-				<div class="bg-overlay-dark-3 h-100" style="background-image:url( images/banner/06.jpg); background-position: center center; background-size: cover;">
+				<div class="bg-overlay-dark-3 h-100" style="background-image:url( /images/banner/06.jpg); background-position: center center; background-size: cover;">
 					<div class="container h-100">
 						<div class="row d-flex h-100">
 							<div class="col-md-8 col-lg-6 me-auto slider-content justify-content-center align-self-center align-items-start text-start">
@@ -401,11 +401,11 @@
 						<div class="widget">
 							<h6>Quick LInks</h6>
 							<ul class="nav flex-column primary-hover">
-								<li class="nav-item"><a class="nav-link" href="about-classic.html">About</a></li>
-								<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
 								<li class="nav-item"><a class="nav-link" href="{% url 'index_9'%}">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="blog-grid-left-sidebar.html">Blog</a></li>
-								<li class="nav-item"><a class="nav-link" href="portfolio-grid-column-4.html">Portfolio</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+								<li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
 							</ul>
 						</div>
 					</div>
@@ -425,25 +425,6 @@
 		</div>
 		<div class="divider mt-3"></div>
 		<!--footer copyright -->
-		<div class="footer-copyright py-3">
-			<div class="container">
-				<div class="d-md-flex justify-content-between align-items-center py-3 text-center text-md-start">
-					<!-- copyright text -->
-					<div class="copyright-text">©2021 All Rights Reserved by <a href="{% url 'index_9'%}"> Wizixo.</a></div>
-					<!-- copyright links-->
-					<div class="copyright-links primary-hover mt-3 mt-md-0">
-						<ul class="list-inline">
-							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="{% url 'index_9'%}">Home</a></li>
-							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">About Us</a></li>
-							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">Career</a></li>
-							<li class="list-inline-item ps-2"><a class="list-group-item-action" href="#">Privacy Policy</a></li>
-							<li class="list-inline-item ps-2"><a class="list-group-item-action pe-0" href="#">Use of terms</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
 	<!-- =======================
 	footer  -->
 
