--- a/APITESCHI/api/templates/sign_in.html
+++ b/APITESCHI/api/templates/sign_in.html
@@ -63,27 +63,32 @@
 					<div class="row h-100">
 						<div class="col-12 col-md-10 col-lg-5 text-start mx-auto d-flex align-items-center">
 							<div class="w-100">
+								
 								<h2 class="">Inicia sesión en tu cuenta.</h2>
 								<h5 class="fw-light"> ¡Es bueno verte! Por favor, inicia sesión con tu cuenta.</h5>
 								<div class="form mt-4 ">
-									<div>
-										<p class="text-start mb-2">Correo Electronico</p>
-										<span class="form-group"><input type="email" class="form-control" placeholder="E-mail"></span>
-									</div>
-									<div>
-										<div class="d-flex justify-content-between align-items-center">
-											<p class="text-start mb-2">Contraseña</p>
-											<!-- <a class="text-muted small mb-2" href="password-recovery.html">Lost password? Click Here.</a> -->
+									{{error}}
+									<form method="post" action="/sign_in/">
+										{% csrf_token %}
+										<div>
+											<p class="text-start mb-2">Nombre de Usuario</p>
+											<span class="form-group"><input type="name" name="Usuario" class="form-control" placeholder="Nombre de Usuario"></span>
 										</div>
-										<span class="form-group"><input type="password" class="form-control" placeholder="*********"></span>
-									</div>
-									<div class="row align-items-center g-0 m-0">
-										<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="{% url 'sign_up'%}">Registrarse</a></span></div>
-										<div class="col-6 col-md-4 text-end"><button class="btn btn-dark ">Vamos a Rockear</button></div>
-									</div>
-									<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
-										<label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label>
-									</div>
+										<div>
+											<div class="d-flex justify-content-between align-items-center">
+												<p class="text-start mb-2">Contraseña</p>
+											</div>
+											<span class="form-group"><input type="password" name="password" class="form-control" placeholder="*********"></span>
+										</div>
+										<div class="row align-items-center g-0 m-0">
+											<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="{% url 'sign_up'%}">Registrarse</a></span></div>
+											<div class="col-6 col-md-4 text-end"><button type="submit" class="btn btn-dark ">Vamos a Rockear</button></div>
+										</div>
+										<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
+											<label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label>
+										</div>
+									</form>
+									
 								</div>
 							</div>
 						</div>
