--- a/APITESCHI/api/templates/team.html
+++ b/APITESCHI/api/templates/team.html
@@ -331,6 +331,79 @@
 						</div>
 					</div>
 				</div>
+
+
+
+				<!--INICIO DE TABLA DE PRUEBA PARA EXCEL-->
+				<h2>Tabla de Ejemplo</h2>
+
+				<table border="1" id="miTabla">
+					<!-- Encabezados de la tabla -->
+					<thead>
+						<tr>
+							<th>Nombre</th>
+							<th>Edad</th>
+							<th>Pais</th>
+						</tr>
+					</thead>
+					<!-- Contenido de la tabla -->
+					<tbody>
+						<tr>
+							<td>Juan</td>
+							<td>25</td>
+							<td>Mexico</td>
+						</tr>
+						<tr>
+							<td>Maria</td>
+							<td>30</td>
+							<td>Argentina</td>
+						</tr>
+						<tr>
+							<td>Carlos</td>
+							<td>22</td>
+							<td>Colombia</td>
+						</tr>
+					</tbody>
+				</table>
+			
+				<button onclick="exportToExcel('miTabla', 'TablaExcel')">Descargar Excel</button>
+			
+				<script>
+					function exportToExcel(tableID, filename = '') {
+						var downloadLink;
+						var dataType = 'application/vnd.ms-excel';
+						var tableSelect = document.getElementById(tableID);
+						var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
+			
+						// Specify file name
+						filename = filename ? filename + '.xls' : 'excel_data.xls';
+			
+						// Create download link element
+						downloadLink = document.createElement("a");
+			
+						document.body.appendChild(downloadLink);
+			
+						if (navigator.msSaveOrOpenBlob) {
+							var blob = new Blob(['\ufeff', tableHTML], {
+								type: dataType
+							});
+							navigator.msSaveOrOpenBlob(blob, filename);
+						} else {
+							// Create a link to the file
+							downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
+			
+							// Setting the file name
+							downloadLink.download = filename;
+			
+							// Triggering the function
+							downloadLink.click();
+						}
+					}
+				</script>
+				<!--FIN DE TABLA DE PRUEBA PARA EXCEL-->
+
+
+
 			</div>
 			<!-- row end -->
 			<div class="row">
