sin agarrar signin

--- a/APITESCHI/api/templates/correo_b.html
+++ b/APITESCHI/api/templates/correo_b.html
@@ -9,8 +9,9 @@
 <body>
     <div style="max-width: 600px; margin: 0 auto; padding: 20px; text-align: center; background-color: #f4f4f4;">
         <h2 style="color: #333;">¡Bienvenido a TeschiWATT!</h2>
-        <p style="color: #666;">Gracias por registrarte en la página de libros más variada para ti TOMA UNA GALLETA.</p>
-        <!--<img src="cid:LibroLo.jpg" alt="Logo de TeschiWATT" style="max-width: 100%; height: auto;"> -->
+        <p>Bienvenido a TESCHIWATT, {{ username }}, gracias por registrarte en la página de libros más variada para ti.</p>
+        <p>Tu nombre de usuario: {{ username }}</p>
+        <p>Tu contraseña: {{ password }}</p>
         <p style="color: #666;">Esperamos que disfrutes de tu experiencia con nosotros.</p>
         <p style="color: #2b1f96;">¡Nos vemos pronto en TeschiWATT!</p>
     </div>
