--- a/APITESCHI/api/templates/sign_in.html
+++ b/APITESCHI/api/templates/sign_in.html
@@ -70,23 +70,26 @@
 									{{error}}
 									<form method="post" action="/sign_in/">
 										{% csrf_token %}
+
+
+
 										<div>
-											<p class="text-start mb-2">Nombre de Usuario</p>
-											<span class="form-group"><input type="name" name="Usuario" class="form-control" placeholder="Nombre de Usuario"></span>
+											<p class="text-start mb-2">CORreo</p>
+											<span class="form-group"><input type="text" name="correo" class="form-control" placeholder="COLOCA TU CORREO" required></span>
 										</div>
 										<div>
 											<div class="d-flex justify-content-between align-items-center">
 												<p class="text-start mb-2">Contraseña</p>
 											</div>
-											<span class="form-group"><input type="password" name="password" class="form-control" placeholder="*********"></span>
+											<span class="form-group"><input type="password" name="password" class="form-control" placeholder="*********" required></span>
 										</div>
 										<div class="row align-items-center g-0 m-0">
 											<div class="col-6 col-md-8"><span class="text-muted">¿No tienes una cuenta? <a href="{% url 'sign_up'%}">Registrarse</a></span></div>
 											<div class="col-6 col-md-4 text-end"><button type="submit" class="btn btn-dark ">Vamos a Rockear</button></div>
 										</div>
-										<div class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
-											<label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label>
-										</div>
+										<div-- class="custom-control custom-checkbox me-sm-2 mb-4 d-flex">
+											<!-- <label class="form-check-label ms-2" for="exampleCheck1"><a href="{% url 'index_9'%}">Regresar al Menu</a></label> -->
+										</div-->
 									</form>
 									
 								</div>
