--- a/APITESCHI/api/templates/index_9.html
+++ b/APITESCHI/api/templates/index_9.html
@@ -149,6 +149,17 @@
 
 						<!-- pruebaaaaa-->
 
+
+						<!-- Menu item 6 Elements-->
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="portfolioMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">GRAFICAS</a>
+							<ul class="dropdown-menu" aria-labelledby="portfolioMenu">
+								<li> <a class="dropdown-item" href="{% url 'graficas'%}">Graficas</a> </li>
+							</ul>
+						</li>
+
+						<!-- pruebaaaaa-->
+
 						<!-- Menu item 6 Docs-->
 						
 					</ul>
